--- a/backend/views/login.ejs
+++ b/backend/views/login.ejs
@@ -15,6 +15,34 @@
       defer
     ></script>
     <script src="../assets/js/init-alpine.js"></script>
+    <script>
+      document.getElementById('login-form').addEventListener('submit', function(event) {
+        event.preventDefault();
+    
+        const email = document.getElementById('email-input').value;
+        const password = document.getElementById('password-input').value;
+    
+        fetch('/login', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json',
+          },
+          body: JSON.stringify({
+            email: email,
+            password: password,
+          }),
+        })
+        .then(response => response.json())
+        .then(data => {
+          localStorage.setItem('jwt', data.token);
+          // Here you can redirect to the desired page after successful login
+          window.location.href = '/raceMates'; 
+        })
+        .catch((error) => {
+          console.error('Error:', error);
+        });
+      });
+    </script>
   </head>
   <body>
 
@@ -33,7 +61,7 @@
             <img
               aria-hidden="true"
               class="hidden object-cover w-full h-full dark:block"
-              src="../assets/img/slovenia.jpeg"
+              src="https://imgur.com/R5jw7Fa"
               alt="Ridge Ride"
             />
           </div>
@@ -44,7 +72,7 @@
               >
                 Login
               </h1>
-              <form action="/login" method="POST">
+              <form action="/login" method="POST" id="login-form">
               <label class="block text-sm">
                 <span class="text-gray-700 dark:text-gray-400">Email</span>
                 <input
@@ -63,16 +91,7 @@
               <!-- You should use a button here, as the anchor is only used for the example  -->
               <input type="submit" class="block w-full px-4 py-2 mt-4 text-sm font-medium leading-5 text-center text-white transition-colors duration-150 bg-purple-600 border border-transparent rounded-lg active:bg-purple-600 hover:bg-purple-700 focus:outline-none focus:shadow-outline-purple">
             </form>
-            <% if (locals.messages.errors) { %>
-                <% messages.errors.forEach( el => { %>
-                    <div class="alert alert-danger text-sm font-medium text-purple-600 dark:text-purple-400"><%= el.msg %></div>
-                <% }) %>    
-            <% } %>
-            <% if (locals.messages.info) { %>
-                <% messages.info.forEach( el => { %>
-                    <div class="alert alert-danger text-sm font-medium text-purple-600 dark:text-purple-400"><%= el.msg %></div>
-                <% }) %>    
-            <% } %>
+          
 
               <hr class="my-8" />
               <p class="mt-4">
