--- a/client/public/login.ejs
+++ b/client/public/login.ejs
@@ -16,31 +16,20 @@
     ></script>
     <script src="../assets/js/init-alpine.js"></script>
     <script>
-      document.getElementById('login-form').addEventListener('submit', function(event) {
+      const form = document.querySelector('#login-form');
+      form.addEventListener('submit', (event) => {
         event.preventDefault();
-    
-        const email = document.getElementById('email-input').value;
-        const password = document.getElementById('password-input').value;
-    
+        const formData = new FormData(form);
         fetch('/login', {
           method: 'POST',
-          headers: {
-            'Content-Type': 'application/json',
-          },
-          body: JSON.stringify({
-            email: email,
-            password: password,
-          }),
+          body: formData,
         })
         .then(response => response.json())
         .then(data => {
-          localStorage.setItem('jwt', data.token);
-          // Here you can redirect to the desired page after successful login
-          window.location.href = '/raceMates'; 
+          // redirect to /raceMates
+          window.location.href = '/raceMates';
         })
-        .catch((error) => {
-          console.error('Error:', error);
-        });
+        .catch(error => console.error(error));
       });
     </script>
   </head>
