--- a/client/public/login.ejs
+++ b/client/public/login.ejs
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html :class="{ 'theme-dark': dark }" x-data="data()" lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,11 +13,9 @@
       src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js"
       defer
     ></script>
-    <script src="../assets/js/init-alpine.js"></script>
     <script>
       document.getElementById('login-form').addEventListener('submit', function(event) {
         event.preventDefault();
-    
         const email = document.getElementById('email-input').value;
         const password = document.getElementById('password-input').value;
     
@@ -59,13 +56,7 @@
             <img
               aria-hidden="true"
               class="object-cover w-full h-full dark:hidden"
-              src="../assets/img/slovenia.jpeg"
-              alt="Ridge Ride"
-            />
-            <img
-              aria-hidden="true"
-              class="hidden object-cover w-full h-full dark:block"
-              src="https://imgur.com/R5jw7Fa"
+              src="https://i.imgur.com/l4JIGIj.jpg"
               alt="Ridge Ride"
             />
           </div>
